--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+autopep8==1.7.0
 cachetools==5.2.0
 certifi==2022.6.15
 charset-normalizer==2.1.1
@@ -13,10 +14,13 @@ oauthlib==3.2.0
 protobuf==4.21.5
 pyasn1==0.4.8
 pyasn1-modules==0.2.8
+pycodestyle==2.9.1
 pyparsing==3.0.9
+python-decouple==3.6
 requests==2.28.1
 requests-oauthlib==1.3.1
 rsa==4.9
 six==1.16.0
+toml==0.10.2
 uritemplate==4.1.1
 urllib3==1.26.12
